--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body section a {
 
 button {
     box-shadow: none !important;
+    font-family: 'FreeUniversal-Bold', sans-serif;
 }
 
 
@@ -41,8 +42,18 @@ h6 {
     font-weight: bold;
 }
 
+h3, 
+h5{
+    font-family: 'FreeUniversal-Bold', sans-serif;
+}
+
+a{
+    font-family: 'FreeUniversal-Bold', sans-serif;
+}
+
 p {
     color: black;
+    font-family: 'FreeUniversal-Bold', sans-serif;
 }
 
 nav {
@@ -50,7 +61,7 @@ nav {
 }
 
 nav .navbar-brand img {
-    width: 60px;
+    width: 40px;
     margin-left: 20px;
 }
 
@@ -108,7 +119,7 @@ nav .offcanvas .dropdown-menu li a {
 /* section-1 */
 .home-section {
     width: 100%;
-    height: 100vh;
+    height: fit-content;
     background-image: url('image/bg.jpg');
     background-position: center;
     background-size: cover;
@@ -123,7 +134,7 @@ nav .offcanvas .dropdown-menu li a {
 }
 
 .home-section .home-container .home-container-box-img img {
-    width: 370px;
+    width: 300px;
 }
 
 /* section 2 */
@@ -276,6 +287,35 @@ nav .offcanvas .dropdown-menu li a {
     margin-top: 30px;
     padding: 0 200px 0 200px;
 }
+
+
+/* app section  */
+
+.app-section{
+    width: 100%;
+    height: fit-content;
+    background: white;
+}
+
+.app-section .app-sec-container{
+    margin-top: 50px;
+    margin-top: 20px;
+}
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 50%;
+}
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 35px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -461,7 +501,26 @@ nav .offcanvas .dropdown-menu li a {
         margin-top: 30px;
         padding: 0 50px 0 50px;
     }
+
+
+    /* app section  */
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 100%;
 }
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 25px;
+}
+   
+.app-section .app-sec-container .app-sec-container-box p{
+    font-size: 12px;
+}
+}
+
+
+
+
 
 /* landscape view */
 @media only screen and (min-height: 768px) and (max-height: 991px) {
@@ -562,6 +621,21 @@ nav .offcanvas .dropdown-menu li a {
         margin-top: 30px;
         padding: 0 50px 0 50px;
     }
+
+
+    /* app section  */
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 100%;
+}
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 25px;
+}
+   
+.app-section .app-sec-container .app-sec-container-box p{
+    font-size: 12px;
+}
 }
 
 
@@ -663,6 +737,23 @@ nav .offcanvas .dropdown-menu li a {
         padding: 0 30px 0 30px;
         font-size: 14px;
     }
+
+
+
+     /* app section  */
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 100%;
+}
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 25px;
+}
+   
+.app-section .app-sec-container .app-sec-container-box p{
+    font-size: 12px;
+}
+
 }
 
 
@@ -791,6 +882,22 @@ nav .offcanvas .dropdown-menu li a {
         padding: 0 25px 0 25px;
         font-size: 14px;
     }
+
+
+
+     /* app section  */
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 100%;
+}
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 25px;
+}
+   
+.app-section .app-sec-container .app-sec-container-box p{
+    font-size: 12px;
+}
 }
 
 
@@ -909,4 +1016,20 @@ nav .offcanvas .dropdown-menu li a {
         padding: 0 30px 0 30px;
         font-size: 14px;
     }
+
+
+
+    /* app section  */
+
+.app-section .app-sec-container .app-sec-container-box p img{
+   width: 70%;
+}
+
+.app-section .app-sec-container .app-sec-container-box h3{
+    font-size: 25px;
+}
+   
+.app-section .app-sec-container .app-sec-container-box p{
+    font-size: 12px;
+}
 }
